# vslam_evaluation

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: orbslam.launch  rovio.launch  viso2.launch
scripts/: comparison_data.py  euroc_add_caminfo.py  plot_matplotlib.py  plot_plotly.py
scripts/single_eval/: eval_viso.py
