<?xml version="1.0"?>
<package>
  <name>vslam_evaluation</name>
  <version>0.0.0</version>
  <description>The vslam_evaluation package</description>

  <maintainer email="nicolov@users.noreply.github.com">nicolov</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_toolkit</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_toolkit</run_depend>

  <export></export>
</package>